--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "put git repo here"
+    "url": "https://github.com/shinmarq/iselect-exam.git"
   },
   "author": "shinmarq",
   "license": "ISC",
